# asrbench

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  Makefile  README-pt.md  README-pypi.md  README.md  benchmark.yml  benchmark_example.py  benchmark_exemple.yml  configfile_example.yml  dataset_benchmark_exemple.yml  gmpd.py  index.html  main.py  main_dataset_benchmark.py  mkdocs.yml  objects.inv  pyproject.toml  report_example.py  run_example.py
asrbench/: __init__.py  abc_benchmark.py  benchmark.py  benchmark_ctx.py  config_loader.py  configfile.py  dataset.py  jiwer_.py  observer.py  output_ctx.py  transcribe.py  utils.py
asrbench/report/: input_.py  report_data.py  report_template.py
asrbench/report/plots/: appearance.py  colors_.py  strategy.py
asrbench/report/templates/: configs.html  infos.html  mean_table.html
asrbench/transcribers/: abc_factory.py  configs.py  factory.py  hf_provider.py  registry.py  vosk_.py  wav2vec_.py
benchmark/: abc_benchmark.py  benchmark_.py  benchmarks.py  dataset.py  dataset_benchmark.py  main.py  utils.py
benchmark/dtos/: common.py  faster_whisper_data.py
benchmark/providers/: abc_factory.py  abc_provider.py  configs.py  factory.py  faster_whisper_.py  hf_provider.py  provider_factory.py  vosk_.py  wav2vec_.py  whisper_.py
benchmark/resources/: get_resources.py
benchmark/resources/references/: senna-e-galvao.txt
cli/configuration/: index.html
cli/installation/: index.html
cli/transcribers/: index.html
cli/usage/: index.html
configuration/: index.html
docs/: configuration.md  index.md  installation.md  usage.md
docs/cli/: configuration.md  installation.md  transcribers.md  usage.md
docs/learn/: new-transcriber.md
docs/references/: benchmark.md  configloader.md  jiwer.md  observer.md  output.md  transcribe.md
docs/references/transcribers/: factory.md  registry.md  transcriber.md
docs/stylesheets/: extra.css
installation/: index.html
learn/new-transcriber/: index.html
references/benchmark/: index.html
references/configloader/: index.html
references/dataset/: index.html
references/jiwer/: index.html
references/observer/: index.html
references/output/: index.html
references/transcribe/: index.html
references/transcribers/factory/: index.html
references/transcribers/registry/: index.html
references/transcribers/transcriber/: index.html
references/utils/: index.html
resources/common_voice_10/txt/: common_voice_pt_36808958.txt  common_voice_pt_36918179.txt  common_voice_pt_36951015.txt
src/benchmark/: benchmark.py  enums.py  f_whisper.py  main.py  models.py  utils.py  wer.py
src/benchmark/dtos/: common.py  faster_whisper_data.py  faster_whisper_dto.py
stylesheets/: extra.css
tests/: config_loader_test.py  conftest.py
tests/custom/: test_transcriber.py
usage/: index.html
wavbench/: abc_benchmark.py  benchmark.py  benchmark_.py  benchmark_context.py  config_loader.py  configfile.py  dataset.py  dataset_benchmark.py  enums.py  measures.py  observer.py  output.py  output_ctx.py  transcribe.py  utils.py
wavbench/dtos/: common.py
wavbench/providers/: abc_factory.py  abc_provider.py  abc_transcriber.py  configs.py  factory.py  faster_whisper_.py  hf_provider.py  registry.py  vosk_.py  wav2vec_.py  whisper_.py
wavbench/report/: components.py  input_.py  main.py  plot_strategy.py  report.py  report_component.py  report_composite.py  report_data.py  report_template.py  template_loader.py
wavbench/transcribers/: factory.py  whisper_.py
(+13 files in other folders)
