[tool.poetry]
name = "wavbench"
version = "0.0.1"
description = "framework for running audio transcription benchmarks with AIs."
authors = ["BDu4rTe <brianschierduarte@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jiwer = "^3.0.4"
faster-whisper = "^1.0.3"
pytube = "^15.0.0"
pydub = "^0.25.1"
pytubefix = "^6.16.2"
vosk = "^0.3.45"
llvmlite = "^0.43.0"
numba = "^0.60.0"
transformers = "^4.44.2"
librosa = "^0.10.2.post1"
torch = "^2.4.1"
openai-whisper = { git = "https://github.com/openai/whisper.git" }

[tool.poetry.extras]
cuda118 = ["torch==2.4.1+cu118"]
cuda12 = ["torch==2.4.1+cu12X"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
