[tool.poetry]
name = "asrbench"
version = "0.0.1"
description = "framework for running audio transcription benchmarks with AIs."
license = "MIT"
authors = ["BDu4rTe <brianschierduarte@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jiwer = "^3.0.4"
faster-whisper = "^1.0.3"
pytube = "^15.0.0"
pydub = "^0.25.1"
pytubefix = "^6.16.2"
vosk = "^0.3.45"
llvmlite = "^0.43.0"
numba = "^0.60.0"
transformers = "^4.44.2"
librosa = "^0.10.2.post1"
torch = "^2.4.1"
openai-whisper = { git = "https://github.com/openai/whisper.git" }
pandas = "^2.2.3"
seaborn = "^0.13.2"
jinja2 = "^3.1.4"
weasyprint = "^62.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
isort = "^5.13.2"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.44"
mkdocstrings = "^0.27.0"
mkdocstrings-python = "^1.12.2"
pymdown-extensions = "^10.12"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
